템플릿에서 제공하는 디자인으로 coc 변경(#21)

--- a/website/templates/website/databreak2018/coc.html
+++ b/website/templates/website/databreak2018/coc.html
@@ -7,34 +7,45 @@
 		myElement.style.backgroundColor = "rgba(0,0,0,0.8)";
 	</script>
 	<!-- Start value Area -->
-	<section class="schedule-area pb-100" id="value" style="padding-top: 100px;">
+	<section class="price-area section-gap">
 		<div class="container">
 			<div class="row d-flex justify-content-center">
 				<div class="menu-content pb-70 col-lg-8">
 					<div class="title text-center">
 						<h1 class="mb-10">Main value of the event</h1>
+						<p>본 행사는 아래와 같은 가치를 지향합니다</p>
 					</div>
 				</div>
 			</div>
-			<div class="text-center">
-				<ul>
-					<li>
-						<h3 class="subtitle"><i class="fa fa-area-chart icon-right-padding"></i>Hello Kaggle</h3>
-						캐글을 통해 데이터 분석에 입문해요
-					</li>
-					<li class="top-padding">
-						<h3 class="subtitle"><i class="fa fa-star-o icon-right-padding"></i>Enjoy Kaggle</h3>
-						천재는 노력하는 자를 이길 수 없고, 노력하는 자는 즐기는 자를 이길수 없다
-					</li>
-					<li class="top-padding">
-						<h3 class="subtitle"><i class="fa fa-trophy icon-right-padding"></i>Kaggle Together</h3>
-						캐글러들이 모여 함께 문제를 해결해요
-					</li>
-					<li class="top-padding">
-						<h3 class="subtitle"><i class="fa fa-smile-o icon-right-padding"></i>No free Lunch, but there is an Open Workshop</h3>
-						노력 없이 성과를 얻을 수 없어요. 데이터뽀개기 워크샵을 통해 발전과 성장을 함꼐해요
-					</li>
-				</ul>
+			<div class="row">
+				<div class="col-lg-3 col-md-6 single-price">
+					<div class="top-part">
+						<h1 class="package-no">01</h1>
+						<h4>Hello Kaggle</h4>
+						<p>캐글을 통해 데이터 분석에 입문해요</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 single-price">
+					<div class="top-part">
+						<h1 class="package-no">02</h1>
+						<h4>Enjoy Kaggle</h4>
+						<p>천재는 노력하는 자를 이길 수 없고, 노력하는 자는 즐기는 자를 이길수 없다</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 single-price">
+					<div class="top-part">
+						<h1 class="package-no">03</h1>
+						<h4>Kaggle Together</h4>
+						<p>캐글러들이 모여 함께 문제를 해결해요</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 single-price">
+					<div class="top-part">
+						<h1 class="package-no">04</h1>
+						<h4>No free Lunch, but there is an Open Workshop</h4>
+						<p>노력 없이 성과를 얻을 수 없어요. 데이터뽀개기 워크샵을 통해 발전과 성장을 함꼐해요</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -74,7 +85,6 @@
 				<hr />
 				<p class="text-white">많은 캐글러 및 데이터과학자분들이 참석하셔서 캐글을 참가하면서 느끼셨던 어려움이나 궁금했던점 들을 공유하며
 					한국에 계신 많은 캐글러 및 데이터과학자들이 좀 더 쉽게 캐글 문제를 해결할 수 있도록 노력하겠습니다.</p>
-
 			</div>
 		</div>
 	</section>
