--- a/website/templates/website/databreak2018/speech.html
+++ b/website/templates/website/databreak2018/speech.html
@@ -1,37 +1,70 @@
 {% extends 'website/databreak2018/base.html' %}
 {% load staticfiles %}
 {% block content %}
+	<script>
+		var myElement = document.querySelector("#header");
+		myElement.style.backgroundColor = "rgba(0,0,0,0.8)";
+	</script>
 			<!-- Start home-aboutus Area -->
-			<section class="home-aboutus-area" style="padding: 80px 0;">
-				<div class="container-fluid">
-					<div class="row align-items-center">
-						<div class="col-lg-6" style="margin: auto;">
-							<p class="top-title">presentation</p>
-							<h1 class="text-white">"{{ pt.title }}"</h1>
-							<h2 class="text-white">장소: Room {{ pt.specific_location }}</h2>
-							<h2 class="text-white">시간: {{ pt.s_time }}~{{ pt.e_time }}</h2>
-							<p class="text-white" style="padding: 30px 0px 50px 0px;">
-								{{ pt.summary }}
-							</p>
+
+	<section id="speech" style="margin: 80px 0;">
+		<div class="whole-wrap">
+			<div class="container">
+				<div class="section-top-border">
+					<p><b>PRESENTATION</b></p>
+					<h2 class="mb-30">"{{ pt.title }}"</h2>
+					<ul class="unordered-list">
+						<li><h3 class="mb-30">장소: Room {{ pt.specific_location }}</h3></li>
+						<li><h3 class="mb-30">시간: {{ pt.s_time }}~{{ pt.e_time }}</h3></li>
+					</ul>
+					<div class="row">
+						<div class="col-md-3 mb-30">
+						{% ifnotequal pt.m.name "캐글뽀개기" %}
+							<img src={{ pt.m.picture }} alt="" class="img-fluid">
+						{% else %}
+							<img src="{% static '/static/databreak2018/img/about/poster_for_web.png' %}" class="img-fluid">
+						{% endifnotequal %}
+						</div>
+						<div class="col-md-9 mt-sm-20">
 							{% ifnotequal pt.m.name "캐글뽀개기" %}
-							<img class="schedule-pic" style="float: left; margin-right: 20px;"
-								 src={{ pt.m.picture }}>
-							<h2 class="text-white">
-								<i class="fa fa-user-circle icon-right-padding" aria-hidden="true"></i>
-								발표자: {{ pt.m.name }}
-							</h2>
-							<h2 class="text-white">소속: {{ pt.m.affiliation }}</h2>
-							<h4 class="text-white">
-								<i class="fa fa-commenting icon-right-padding" aria-hidden="true"></i>
-								관심분야: {{ pt.m.interest }}</h4>
+								<h2 class="mb-20 icon-right-padding" style="display: inline-block; float: left;">
+									<i class="fa fa-user-circle icon-right-padding" aria-hidden="true"></i>
+									발표자: {{ pt.m.name }}
+								</h2>
+								<ul>
+									{% for sp_c in contacts %}
+										{% if sp_c.contact_type == 'email' %}
+											<a class="icon-circle"
+											   target="_blank" href=mailto:{{ sp_c.url }}
+											   style="margin: 5px 0 23px 0;">
+												<i class="fa fa-envelope-o"></i>
+											</a>
+										{% else %}
+											<a class="icon-circle"
+											   target="_blank" href={{ sp_c.url }}
+											   style="margin: 5px 0 23px 0;">
+												<i class="fa fa-{{ sp_c.contact_type }}"></i>
+											</a>
+										{% endif %}
+									{% endfor %}
+								</ul>
+								<h4 class="mb-30">
+									<i class="fa fa-id-card icon-right-padding" aria-hidden="true"></i>
+									{{ pt.m.affiliation }}</h4>
+								<h4 class="mb-30">
+									<i class="fa fa-commenting icon-right-padding" aria-hidden="true"></i>
+									관심분야: {{ pt.m.interest }}
+								</h4>
 							{% endifnotequal %}
+							<blockquote class="generic-blockquote">{{ pt.summary }}</blockquote>
 						</div>
 					</div>
 				</div>
-			</section>
-			<!-- End home-aboutus Area -->
+			</div>
+		</div>
+	</section>
 
 
-			<script src="{% static 'databreak2018/js/vendor/jquery-2.2.4.min.js' %}"></script>
+	<script src="{% static 'databreak2018/js/vendor/jquery-2.2.4.min.js' %}"></script>
 
 {% endblock %}
