--- a/website/templates/website/databreak2018/sponsorship.html
+++ b/website/templates/website/databreak2018/sponsorship.html
@@ -24,13 +24,13 @@
 				<p>또한, 후원사 발표 세션과 부스 구성 등을 협의하여 지원해드리며,
 					구하기 어려운 데이터 과학에 관련된 종사자 분들을 채용할 수 있는 홍보의 장으로 활용하실 수 있습니다.
 					후원 관련 세부 사항은 행사 전까지 다소 변경될 수 있습니다.
-					후원관련 문의 사항은 <a href="mailto:{{ rep_contact.email }}">{{ rep_contact.email }}</a>													 으로 연락해주세요.</p>
+					후원관련 문의 사항은 <a href="mailto:{{ rep_contact.email }}">{{ rep_contact.email }}</a>												 으로 연락해주세요.</p>
 				<p>행사 여건과 후원 규모에 따라 주최측에서 제공해드리는 항목에 차등을 두고 있습니다.
 					계산서 발급이 불가능하고, 참가자들의 명단 또한 공유 불가능합니다.</p>
 				<p style="padding-top: 30px;">
-					<h3 class="subtitle">후원받는 항목</h3>
-					<h4>
-						<ul style="padding-left: 15px;">
+					<h3 class="text-heading">후원받는 항목</h3>
+					<span style="font-weight: bold;">
+						<ul style="padding-left: 15px;" class="unordered-list">
 							<li>현금</li>
 							<li>현물 (참가자 선물 + 데이터 과학 관련된 서적)</li>
 							<li>레코딩(촬영)</li>
@@ -39,19 +39,19 @@
 							<li>미디어 / 예술 / 디자인</li>
 							<li>그 외 협의후 가능</li>
 						</ul>
-					</h4>
+					</span>
 				</p>
 				<p style="padding-top: 20px;">
-					<h3 class="subtitle">후원 시 주최측에서 제공해드리는 항목</h3>
-					<h4>
-						<ul style="padding-left: 15px;">
+					<h3 class="text-heading">후원 시 주최측에서 제공해드리는 항목</h3>
+					<span style="font-weight: bold;">
+						<ul style="padding-left: 15px;" class="unordered-list">
 							<li>행사 홈페이지에 배너 게시</li>
 							<li>행사 현장에 홍보물 비치 (포스터, 리플렛 등)</li>
 							<li>후원사 발표 세션 (후원 규모가 150만원 이상일 경우 가능, 제품 홍보를 위한 발표는 허용되지 않으며 발표 주제 협의 필요)</li>
 							<li>부스 테이블</li>
 							<li>티켓 지원 (후원 규모에 따라 티켓 개수에 차등)</li>
 						</ul>
-					</h4>
+					</span>
 				</p>
 			</div>
 		</div>
