coc, sponsorship 문구 수정(#22)

--- a/website/templates/website/databreak2018/coc.html
+++ b/website/templates/website/databreak2018/coc.html
@@ -13,7 +13,7 @@
 				<div class="menu-content pb-70 col-lg-8">
 					<div class="title text-center">
 						<h1 class="mb-10">Main value of the event</h1>
-						<p>본 행사는 아래와 같은 가치를 지향합니다</p>
+						<p>본 워크샵은 아래와 같은 가치를 지향합니다</p>
 					</div>
 				</div>
 			</div>
@@ -22,28 +22,28 @@
 					<div class="top-part">
 						<h1 class="package-no">01</h1>
 						<h4>Hello Kaggle</h4>
-						<p>캐글을 통해 데이터 분석에 입문해요</p>
+						<p>분석가들의 놀이터인 캐글을 통해 데이터 분석에 입문해요</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 single-price">
 					<div class="top-part">
 						<h1 class="package-no">02</h1>
 						<h4>Enjoy Kaggle</h4>
-						<p>천재는 노력하는 자를 이길 수 없고, 노력하는 자는 즐기는 자를 이길수 없다</p>
+						<p>천재는 노력하는 자를 이길 수 없고, 노력하는 자는 즐기는 자를 이길 수 없어요</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 single-price">
 					<div class="top-part">
 						<h1 class="package-no">03</h1>
 						<h4>Kaggle Together</h4>
-						<p>캐글러들이 모여 함께 문제를 해결해요</p>
+						<p>캐글러들이 모여 복잡한 문제를 함께 해결해요</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 single-price">
 					<div class="top-part">
 						<h1 class="package-no">04</h1>
 						<h4>No free Lunch, but there is an Open Workshop</h4>
-						<p>노력 없이 성과를 얻을 수 없어요. 데이터뽀개기 워크샵을 통해 발전과 성장을 함꼐해요</p>
+						<p>노력 없이 성과를 얻을 수 없어요. 데이터뽀개기 워크샵을 통해 발전과 성장을 위해 노력해요</p>
 					</div>
 				</div>
 			</div>
@@ -63,28 +63,29 @@
 			</div>
 			<div>
 				<p><h4 class="text-white">워크샵 참석자를 비롯해 발표자, 후원기관, 자원봉사자들은 다음과 같은 행동 강령에 따를 것을 동의합니다.
-					주최측은 워크샵 기간동안 이 행동강령을 집행합니다.
+					주최측은 워크샵 기간동안 이 행동 강령을 집행합니다.
 				행사에 참여하는 모두에게 안전한 환경이 될 수 있도록 협조하여 주십시오.</h4></p>
 				<p class="text-white">도움이 필요하십니까?
 					도움이 필요하시거나 문의사항이 있으신 경우  <a href="mailto:{{ rep_contact.email }}">{{ rep_contact.email }}</a>
 					로 메일을 보내주시기 바랍니다.</p>
-				<p class="text-white">우리는 성별, 성정체성, 나이, 성적지향성, 장애 여부, 외양, 체형, 인종, 민족, 종교, 기술적 선택에 관계없이,
+				<p class="text-white">우리는 성별, 성 정체성, 나이, 성적 지향성, 장애 여부, 외양, 체형, 인종, 민족, 종교, 기술적 선택에 관계없이,
 					모든 참여자가 폭력에 노출되지 않는 워크샵을 만들고자 합니다.
 					주최측은 워크샵 내 어떤 형태의 폭력도 용납하지 않을 것입니다.
 					성적인 농담과 이미지는 발표, 워크샵, 뒷풀이, 트위터 등의 소셜 미디어를 포함한 모든 곳에서 엄격하게 금지되어 있습니다.
 					이와 같은 규칙을 지키지 않는 워크샵 참여자들은 워크샵 주최측의 재량으로 환불조치 없이 워크샵에서 퇴출당할 수 있습니다.</p>
 				<hr />
 				<p><h4 class="text-white">2018년 캐글뽀개기에서 새로운 놀이터를 제공합니다.</h4></p>
-				<p class="text-white">데이터 과학에 대한 관심이 급증한 지금 시점에서 캐글을 즐기는 사람(이하 캐글러) 및
-					데이터 과학에 종사하고있는 데이터과학자들에게 어떠한것이 필요할지 고민해봤습니다.</p>
-				<p class="text-white">많은 캐글러 및 데이터과학에 종사하고 계신 분들이 온라인에서 궁금한점에 대해 질문하고 답변하는 것이 아닌
-					직접 만나고 소통하며, 그동안 캐글의 컴피티션에 참가하면서 막혔던 부분들
-					혹은 현직에서 경험하고있는 어려움을 공유함으로써 조금이나마 어려움을 해소하는 자리가 되었으면 합니다.
-					많은 캐글러 및 데이터 과학에 종사하고 계신분들이 참석하셔서 매년 편안하게 이야기 나눌 수 있는 행사가 되도록 노력하겠습니다.</p>
-				<p class="text-white">본 워크샵이 캐글을 많이 홍보하여 새로운 캐글러들의 유입을 장려하고 상위 리더보드에 한국 캐글러들이 많아짐을 기대합니다.</p>
+				<p class="text-white">데이터 과학에 대한 관심이 급증한 지금 시점에서, 캐글을 즐기는 사람(이하 캐글러) 및
+					데이터 분야에 종사하고 있는 많은 이들에게 어떠한 것이 필요할지 고민했습니다.</p>
+				<p class="text-white">많은 캐글러 및 데이터 과학에 종사하고 계신 분들이 온라인에서만 궁금한 점에 대해 질문하고 답변하는 것이 아닌
+					직접 만나고 소통할 수 있었으면 좋겠습니다. 그동안 캐글의 컴피티션에 참가하면서 막혔던 부분들,
+					혹은 현업에서의 경험을 공유함으로써 어려움과 갈증을 조금이나마 해소하는 자리가 되었으면 합니다.
+					많은 캐글러 및 데이터 과학에 종사하고 계신 분들이 매년 편안하게 이야기 나눌 수 있는 행사가 되도록 노력하겠습니다.</p>
+				<p class="text-white">본 워크샵이 캐글을 많이 홍보하여 새로운 캐글러들의 유입을 장려하고
+					리더보드 상위에 한국 캐글러들이 많아짐을 기대합니다.</p>
 				<hr />
-				<p class="text-white">많은 캐글러 및 데이터과학자분들이 참석하셔서 캐글을 참가하면서 느끼셨던 어려움이나 궁금했던점 들을 공유하며
-					한국에 계신 많은 캐글러 및 데이터과학자들이 좀 더 쉽게 캐글 문제를 해결할 수 있도록 노력하겠습니다.</p>
+				<p class="text-white">본 워크샵과 주최측은
+					한국에 계신 많은 캐글러 및 데이터 과학자들이 좀 더 쉽게 캐글 문제를 해결할 수 있도록 노력하겠습니다.</p>
 			</div>
 		</div>
 	</section>
