--- a/website/templates/website/databreak2018/sponsorship.html
+++ b/website/templates/website/databreak2018/sponsorship.html
@@ -12,19 +12,19 @@
 			<div class="row d-flex justify-content-center">
 				<div class="menu-content pb-70 col-lg-8">
 					<div class="title text-center">
-						<h1 class="mb-10">후원 정책</h1>
-						<p>현재 추가 후원사를 받고 있습니다. 후원에 감사드립니다.</p>
+						<h1 class="mb-10">Sponsorship Guideline</h1>
+						<p>추가 후원사를 받고 있습니다. 후원에 감사드립니다.</p>
 					</div>
 				</div>
 			</div>
 			<div>
-				<p>DataBreak 2018은 커뮤니티 주관으로 이뤄지는 비영리 행사로, 기업 및 기관에서 개최하는 행사와 성격이 다릅니다.
-					발표자 분들을 포함하여, 서포터즈 및 운영자 분들 모든 인원이 금전적 이득 없이
-					순수히 캐글 플랫폼의 저변 확대와 커뮤니티 활성화를 위해 진행하는 행사입니다.</p>
-				<p>또한, 후원사 발표 세션과 부스 구성 등을 협의하여 지원해드리며,
+				<p><b>DataBreak 2018</b>은 커뮤니티 주관으로 이뤄지는 비영리 행사로, 기업 및 기관에서 개최하는 행사와 성격이 다릅니다.
+					발표자 분들을 포함하여 서포터즈 및 운영자 분들 모든 인원이 금전적 이득 없이
+					순수히 캐글 플랫폼의 저변 확대와 커뮤니티 활성화를 위해 행사에 참여합니다.</p>
+				<p>후원사 발표 세션과 부스 구성 등을 협의하여 지원해드리며,
 					구하기 어려운 데이터 과학에 관련된 종사자 분들을 채용할 수 있는 홍보의 장으로 활용하실 수 있습니다.
 					후원 관련 세부 사항은 행사 전까지 다소 변경될 수 있습니다.
-					후원관련 문의 사항은 <a href="mailto:{{ rep_contact.email }}">{{ rep_contact.email }}</a>												 으로 연락해주세요.</p>
+					후원 관련 문의 사항은 <a href="mailto:{{ rep_contact.email }}">{{ rep_contact.email }}</a>												 으로 연락해주세요.</p>
 				<p>행사 여건과 후원 규모에 따라 주최측에서 제공해드리는 항목에 차등을 두고 있습니다.
 					계산서 발급이 불가능하고, 참가자들의 명단 또한 공유 불가능합니다.</p>
 				<p style="padding-top: 30px;">
@@ -32,12 +32,12 @@
 					<span style="font-weight: bold;">
 						<ul style="padding-left: 15px;" class="unordered-list">
 							<li>현금</li>
-							<li>현물 (참가자 선물 + 데이터 과학 관련된 서적)</li>
-							<li>레코딩(촬영)</li>
-							<li>다과(케이터링)</li>
+							<li>현물: 참가자 기념품이나 데이터 과학 관련된 서적 등 (후원사 로고가 들어간 것도 가능합니다)</li>
+							<li>스트리밍, 촬영 지원</li>
+							<li>다과 or 식사 케이터링</li>
 							<li>행사 경품</li>
 							<li>미디어 / 예술 / 디자인</li>
-							<li>그 외 협의후 가능</li>
+							<li>그 외 협의 후 가능</li>
 						</ul>
 					</span>
 				</p>
@@ -46,10 +46,10 @@
 					<span style="font-weight: bold;">
 						<ul style="padding-left: 15px;" class="unordered-list">
 							<li>행사 홈페이지에 배너 게시</li>
-							<li>행사 현장에 홍보물 비치 (포스터, 리플렛 등)</li>
-							<li>후원사 발표 세션 (후원 규모가 150만원 이상일 경우 가능, 제품 홍보를 위한 발표는 허용되지 않으며 발표 주제 협의 필요)</li>
-							<li>부스 테이블</li>
-							<li>티켓 지원 (후원 규모에 따라 티켓 개수에 차등)</li>
+							<li>행사 현장에 홍보물 비치: 포스터, 리플렛 등</li>
+							<li>후원사 발표 세션: 후원 규모가 150만원 이상일 경우 가능, 제품 홍보를 위한 발표는 불가능하며 발표 주제 협의 필요합니다</li>
+							<li>부스 테이블 (원하실 경우)</li>
+							<li>워크샵 티켓 제공 (후원 규모에 따라 티켓 개수에 차등)</li>
 						</ul>
 					</span>
 				</p>
