후원사를 레벨에 따라 ordering 되도록 변경 등(#25)

--- a/website/static/databreak2018/css/my.css
+++ b/website/static/databreak2018/css/my.css
@@ -1,13 +1,24 @@
 body{
     font-size: 16px;
 }
-img.sponsor {
-    width: 200px;
+img.sponsor-dia {
+    width: 330px;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
 }
-
+img.sponsor-gold {
+    width: 250px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+img.sponsor-silver {
+    width: 150px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
 img.supporter {
     width: 150px;
     position: relative;
