--- a/website/templates/website/databreak2018/sponsorship.html
+++ b/website/templates/website/databreak2018/sponsorship.html
@@ -24,9 +24,9 @@
 				<p>후원사 발표 세션과 부스 구성 등을 협의하여 지원해드리며,
 					구하기 어려운 데이터 과학에 관련된 종사자 분들을 채용할 수 있는 홍보의 장으로 활용하실 수 있습니다.
 					후원 관련 세부 사항은 행사 전까지 다소 변경될 수 있습니다.
-					후원 관련 문의 사항은 <a href="mailto:{{ rep_contact.email }}">{{ rep_contact.email }}</a>												 으로 연락해주세요.</p>
-				<p>행사 여건과 후원 규모에 따라 주최측에서 제공해드리는 항목에 차등을 두고 있습니다.
-					계산서 발급이 불가능하고, 참가자들의 명단 또한 공유 불가능합니다.</p>
+					후원 관련 문의 사항은 <a href="mailto:{{ rep_contact.email }}">{{ rep_contact.email }}</a>											 으로 연락해주세요.</p>
+				<p>행사 여건과 후원 규모에 따라 주최측에서 제공해드리는 항목에 차등을 두고 있으며,
+					후원에 대한 계산서 발급은 불가능합니다.</p>
 				<p style="padding-top: 30px;">
 					<h3 class="text-heading">후원받는 항목</h3>
 					<span style="font-weight: bold;">
