발표자 전체보기 페이지로의 링크 추가(#23)

--- a/website/templates/website/databreak2018/index.html
+++ b/website/templates/website/databreak2018/index.html
@@ -98,7 +98,12 @@
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
 								<h1 class="mb-10">우리의 발표자들</h1>
-								<p>좌우로 슬라이드하면 발표자를 보실 수 있습니다(순서 랜덤)</p>
+								<p>좌우로 슬라이드하면 발표자를 보실 수 있습니다 (순서 랜덤)</p>
+                                <a href="/databreak2018/speakers"
+                                   class="genric-btn primary circle arrow"
+                                   target="_blank">
+                                    발표자 전체보기<span class="lnr lnr-arrow-right"></span>
+                                </a>
 							</div>
 						</div>
 					</div>
