footer의 커뮤니티 소개 문구 일부 수정(#22)

--- a/website/templates/website/databreak2018/base.html
+++ b/website/templates/website/databreak2018/base.html
@@ -210,7 +210,7 @@
                                 <p>
                                     캐글뽀개기(KaggleBreak):
                                     데이터 과학, 분석적 사고, 캐글에 대한 관심으로 모인 사람들의 공간입니다.
-                                    3,000명 이상의 멤버들이 함께하는 국내 최대 캐글 관련 커뮤니티입니다.
+                                    3,000명 이상의 멤버들이 함께하는 국내 최대 캐글 커뮤니티입니다.
                                 </p>
                                 <p class="footer-text">
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
