--- a/website/templates/website/databreak2018/speakers.html
+++ b/website/templates/website/databreak2018/speakers.html
@@ -1,18 +1,30 @@
 {% extends 'website/databreak2018/base.html' %}
 {% load staticfiles %}
 {% block content %}
+	<script src="{% static 'databreak2018/js/notify.js' %}"></script>
+	<script>
+		$.notify("공개가 허락된 자료에 한하여 업로드 되었습니다.", "info");
+	</script>
 	<script>
 		var myElement = document.querySelector("#header");
 		myElement.style.backgroundColor = "rgba(0,0,0,0.8)";
 	</script>
 			<!-- Start home-aboutus Area -->
 	{% for pt in pts %}
+	<script>console.log("{{ pt.material }}");</script>
 	<section id="speech" style="margin: 80px 0;">
 		<div class="whole-wrap">
 			<div class="container">
 				<div class="section-top-border">
 					<p><b>PRESENTATION</b></p>
-					<h2 class="mb-30">"{{ pt.title }}"</h2>
+					<h2 class="mb-30" style="display: inline-block; margin-right: 15px;">
+						"{{ pt.title }}"
+					</h2>
+					{% for m in pt.material %}
+						<a href="{{ m.material_link }}"
+						   class="genric-btn primary radius mb-30"
+							target="_blank">DOWNLOAD</a>
+					{% endfor %}
 					<ul class="unordered-list">
 						{% if '+' in pt.specific_location %}
 							<li><h3 class="mb-30">장소: 전체</h3></li>
@@ -26,7 +38,7 @@
 						{% ifnotequal pt.m__name "캐글뽀개기" %}
 							<img src={{ pt.m__picture }} alt="" class="img-fluid">
 						{% else %}
-							<img src="{% static '/static/databreak2018/img/about/poster_for_web.png' %}" class="img-fluid">
+							<img src="{% static 'databreak2018/img/about/poster_for_web.png' %}" class="img-fluid">
 						{% endifnotequal %}
 						</div>
 						<div class="col-md-9 mt-sm-20">
